authorization bugfixed, find users endpoint added

--- a/Project-0/package.json
+++ b/Project-0/package.json
@@ -4,7 +4,8 @@
   "description": "Reimbersment System",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node src/index.ts"
   },
   "author": "Kenneth Davis",
   "license": "ISC",
