--- a/Project-0/package.json
+++ b/Project-0/package.json
@@ -10,12 +10,16 @@
   "author": "Kenneth Davis",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.2",
+    "@types/express-session": "^1.15.16",
     "ts-node": "^8.5.2",
-    "typescript": "^3.7.2",
-    "@types/express": "^4.17.2"
+    "@types/pg": "^7.11.2",
+    "typescript": "^3.7.2"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "pg": "^7.14.0"
   }
 }
