--- a/Project-0/package.json
+++ b/Project-0/package.json
@@ -5,15 +5,16 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/index.ts"
+    "start": "nodemon --exec ts-node src/index.ts"
   },
   "author": "Kenneth Davis",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.2",
     "@types/express-session": "^1.15.16",
-    "ts-node": "^8.5.2",
     "@types/pg": "^7.11.2",
+    "nodemon": "^2.0.1",
+    "ts-node": "^8.5.2",
     "typescript": "^3.7.2"
   },
   "dependencies": {
